--- a/index.html
+++ b/index.html
@@ -177,66 +177,18 @@
     }
 
     async function fetchAll(){
-      const updatedEl = document.getElementById('updatedAt');
-      updatedEl.textContent = '불러오는 중…';
-
-      // ⛳ 현재 선택 상태 보존 (모드/검색어/경기/페이지)
-      const q = (document.getElementById('search').value || '').trim();
-      const prevItem = state.filteredList[state.selectedIndex];
-      const prevId = prevItem ? (MODE==='bracket' ? prevItem.key : prevItem.main) : null;
-      const prevPage = state.page;
-
-      try {
-        const res = await fetch(API_URL + "?t=" + Date.now(), { cache:'no-store' });
-        const text = await res.text();
-        let resp; try { resp = JSON.parse(text); } catch(err){ updatedEl.textContent='API 응답 파싱 실패'; return; }
-        if (!resp || resp.ok !== true) { updatedEl.textContent = 'API 오류'; return; }
-
-        // 새 데이터 반영
-        state.bracket = Array.isArray(resp.bracket) ? resp.bracket : [];
-        state.results = Array.isArray(resp.results) ? resp.results : [];
-
-        // 현재 모드 유지하며 필터/목록 재생성
-        const list = (MODE==='bracket') ? state.bracket : state.results;
-        state.filteredList = q ? list.filter(ev => fmtTitle(ev).includes(q)) : list.slice();
-
-        // 선택 복구: 동일 key/main 찾기
-        let idx = -1;
-        if (prevId != null) {
-          idx = state.filteredList.findIndex(ev => (MODE==='bracket' ? ev.key : ev.main) === prevId);
-        }
-        state.selectedIndex = (idx >= 0) ? idx : (state.filteredList.length ? 0 : 0);
-
-        // 렌더 & 페이지 복구
-        buildList();
-        renderViewer(); // 이 호출에서 state.totalPages 계산됨
-        if (prevPage >= 0 && prevPage < state.totalPages) {
-          state.page = prevPage;
-          renderViewer();
-        } else {
-          state.page = 0; // 범위 밖이면 초기화
-        }
-
-        updatedEl.textContent = new Date(resp.updatedAt || Date.now()).toLocaleTimeString('ko-KR') + ' 업데이트';
-      } catch (e) {
-        updatedEl.textContent = '네트워크 오류';
-      }
-    }
-        state.selectedIndex = idx >= 0 ? idx : 0;
-
-        // 렌더 + 페이지 복구 시도
-        buildList();
-        renderViewer();
-        if (idx >= 0) {
-          if (prevPage < state.totalPages) state.page = prevPage; else state.page = 0;
-          renderViewer();
-        }
-
-        updated.textContent = new Date(resp.updatedAt || Date.now()).toLocaleTimeString('ko-KR') + ' 업데이트';
-      }catch(e){
-        updated.textContent = '네트워크 오류';
-      }
-    }catch(e){ console.error('fetch 실패',e); document.getElementById('updatedAt').textContent='네트워크 오류'; }
+      document.getElementById('updatedAt').textContent='불러오는 중…';
+      try{
+        const res=await fetch(API_URL+"?t="+Date.now(),{cache:'no-store'});
+        const text=await res.text();
+        console.log('[API raw]',text);
+        let resp;
+        try{ resp=JSON.parse(text);}catch(e){ console.error('파싱실패',e); return; }
+        if(!resp||resp.ok!==true){ document.getElementById('updatedAt').textContent='API 오류'; return; }
+        state.bracket=resp.bracket||[]; state.results=resp.results||[];
+        rebuild(MODE);
+        document.getElementById('updatedAt').textContent=new Date(resp.updatedAt||Date.now()).toLocaleTimeString('ko-KR')+' 업데이트';
+      }catch(e){ console.error('fetch 실패',e); document.getElementById('updatedAt').textContent='네트워크 오류'; }
     }
 
     document.getElementById('search').addEventListener('input',e=>{
